src/objects/STAR_Access__c.object
<CustomObject>
    <fields>
        <fullName>OpportunityAccessLevel__c</fullName>
        <description>Read-Only or Read/Write</description>
        <label>Opportunity Access Level</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Opportunity this User has access to</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>STAR Access</relationshipLabel>
        <relationshipName>STAR_Access</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(OpportunityId__r.StageName )</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowCause__c</fullName>
        <description>How this User is getting sharing of this STAR Opportunity</description>
        <label>Sharing Reason</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User who has access to the Opportunity</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>STAR_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserIsActive__c</fullName>
        <formula>UserId__r.IsActive</formula>
        <label>User Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <formula>UserId__r.UserRoleId</formula>
        <label>User Role Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>UserId__r.Profile.Name</formula>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>UserId__r.UserRole.Name</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Signed_ARIA__c</fullName>
        <description>If this User has signed the ARIA for STAR Opportunities</description>
        <formula>UserId__r.Signed_ARIA__c</formula>
        <label>User Signed ARIA</label>
        <type>Checkbox</type>
    </fields>
    <label>STAR Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OpportunityId__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>OpportunityAccessLevel__c</columns>
        <columns>RowCause__c</columns>
        <columns>UserId__c</columns>
        <columns>User_Profile__c</columns>
        <columns>User_Role__c</columns>
        <columns>User_Signed_ARIA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>notEqual</operation>
            <value>AOP</value>
        </filters>
        <filters>
            <field>UserIsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OpportunityId + UserId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STAR Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>